deploy-istio/zero/message/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: message
  namespace: zero
  labels:
    app: message
    service: message
spec:
  selector:
    app: message
  ports:
    - name: grpc-port
      protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
